# dinosaur

./: CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci-build.yml
dinosaur/: __init__.py  associated_legendre.py  associated_legendre_test.py  build_defs.bzl  coordinate_systems.py  coordinate_systems_test.py  filtering.py  filtering_test.py  fourier.py  fourier_test.py  held_suarez.py  held_suarez_test.py  horizontal_interpolation.py  horizontal_interpolation_test.py  jax_numpy_utils.py  jax_numpy_utils_test.py  layer_coordinates.py  primitive_equations.py  primitive_equations_integration_test.py  primitive_equations_states.py  primitive_equations_test.py  pytree_utils.py  pytree_utils_test.py  radiation.py  radiation_test.py  scales.py  scales_test.py  shallow_water.py  shallow_water_states.py  shallow_water_states_test.py  shallow_water_test.py  sigma_coordinates.py  sigma_coordinates_test.py  spherical_harmonic.py  spherical_harmonic_test.py  time_integration.py  time_integration_test.py  typing.py  vertical_interpolation.py  vertical_interpolation_test.py  (+3 more)
dinosaur/data/: ecmwf137_hybrid_levels.csv  ufs127_hybrid_levels.csv
dinosaur/pipelines/: __init__.py  regrid.py  regrid_test.py
docs/source/: conf.py  dinosaur.rst  index.rst  modules.rst
notebooks/: baroclinic_instability.ipynb  held_suarez.ipynb
